--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@
     background-color: blue;
     color: gold
 }
+
+.rectangulo {
+    background-color: black;
+    height: 200px;
+    width: 50%;
+}
